# sap

./: CLAUDE.md  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
.githooks/: pre-commit
crates/dew-complex/: Cargo.toml
crates/dew-complex/src/: cranelift.rs  funcs.rs  lib.rs  lua.rs  ops.rs  parity_tests.rs  wgsl.rs
crates/dew-core/: Cargo.toml
crates/dew-core/src/: lib.rs
crates/dew-linalg/: Cargo.toml
crates/dew-linalg/src/: cranelift.rs  exhaustive_tests.rs  funcs.rs  lib.rs  lua.rs  ops.rs  parity_tests.rs  wgsl.rs
crates/dew-quaternion/: Cargo.toml
crates/dew-quaternion/src/: cranelift.rs  funcs.rs  lib.rs  lua.rs  ops.rs  parity_tests.rs  wgsl.rs
crates/dew-scalar/: Cargo.toml
crates/dew-scalar/src/: cranelift.rs  lib.rs  lua.rs  wgsl.rs
crates/dew-wasm/: Cargo.toml
crates/dew-wasm/src/: lib.rs
crates/sap-linalg/src/: cranelift.rs  exhaustive_tests.rs  lib.rs  lua.rs  parity_tests.rs  wgsl.rs
crates/sap-scalar/: Cargo.toml
crates/sap-scalar/src/: cranelift.rs  lib.rs  lua.rs  wgsl.rs
docs/.vitepress/: config.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_backend_parity.rs  fuzz_complex_parity.rs  fuzz_linalg_parity.rs  fuzz_quaternion_parity.rs
playground/: README.md  index.html  package.json
playground/src/: App.tsx  index.tsx
playground/src/components/: AstViewer.tsx  Editor.tsx  OutputPanel.tsx
playground/src/styles/: index.css
