[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/dew"

[workspace.dependencies]
rhizome-dew-core = { path = "crates/dew-core" }
rhizome-dew-scalar = { path = "crates/dew-scalar" }
rhizome-dew-linalg = { path = "crates/dew-linalg" }
rhizome-dew-complex = { path = "crates/dew-complex" }
rhizome-dew-quaternion = { path = "crates/dew-quaternion" }
