[package]
name = "dew-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.rhizome-dew-core]
path = "../crates/dew-core"
features = ["cond", "func"]

[dependencies.rhizome-dew-scalar]
path = "../crates/dew-scalar"
features = ["lua", "cranelift"]

[dependencies.rhizome-dew-linalg]
path = "../crates/dew-linalg"
features = ["lua", "cranelift"]

[dependencies.rhizome-dew-complex]
path = "../crates/dew-complex"
features = ["lua", "cranelift"]

[dependencies.rhizome-dew-quaternion]
path = "../crates/dew-quaternion"
features = ["lua", "cranelift"]

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_eval"
path = "fuzz_targets/fuzz_eval.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_backend_parity"
path = "fuzz_targets/fuzz_backend_parity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_complex_parity"
path = "fuzz_targets/fuzz_complex_parity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_quaternion_parity"
path = "fuzz_targets/fuzz_quaternion_parity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_linalg_parity"
path = "fuzz_targets/fuzz_linalg_parity.rs"
test = false
doc = false
bench = false

[profile.release]
debug = true
