[package]
name = "rhizome-dew-linalg"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Linear algebra types and operations for dew expressions"

[features]
default = ["3d"]
3d = []           # Vec3, Mat3
4d = ["3d"]       # Vec4, Mat4 (implies 3d)
wgsl = []         # WGSL code generation
lua = ["mlua"]    # Lua code generation
cranelift = ["cranelift-codegen", "cranelift-frontend", "cranelift-jit", "cranelift-module"]
all = ["3d", "4d", "wgsl", "lua", "cranelift"]

[dependencies]
rhizome-dew-core = { workspace = true }
num-traits = "0.2"

# Optional backend dependencies
mlua = { version = "0.10", features = ["luajit", "vendored"], optional = true }
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }

