[package]
name = "rhizome-dew-scalar"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standard scalar function library for dew expressions"

[features]
default = []
wgsl = []
lua = ["mlua"]
cranelift = ["cranelift-codegen", "cranelift-frontend", "cranelift-jit", "cranelift-module"]
all = ["wgsl", "lua", "cranelift"]

[dependencies]
rhizome-dew-core.workspace = true
num-traits = "0.2"

# Lua backend
mlua = { version = "0.10", features = ["luajit", "vendored"], optional = true }

# Cranelift backend
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
